Fixed contrast violation.
Our links in our content did not have high enough contrast according
to tota11y (I recall checking the contrast with a manual tool, so I
imagine the manual tool was less strict).

I just switched it to the suggested value given by tota11y which looks
about equivalent :).

Test Plan:
1) Go to any page and activate tota11y.
2) Run the contrast plugin.
3) See no violations

Auditors: jordan

--- a/src/styles/post-template.less
+++ b/src/styles/post-template.less
@@ -310,7 +310,7 @@ body {
         }
 
         a {
-            color: #778A2D;
+            color: #6c7d28;
             text-decoration: none;
         }
 
